2005-08-29  Michael Smith <msmith@fluendo.com>
	* ext/ogg/Makefile.am:
	* ext/ogg/gstogg.c: (plugin_init):
	* ext/ogg/gstoggparse.c: (gst_ogg_parse_get_type), (free_stream),
	(gst_ogg_parse_delete_all_streams), (gst_ogg_parse_new_stream),
	(gst_ogg_parse_find_stream), (gst_ogg_parse_base_init),
	(gst_ogg_parse_class_init), (gst_ogg_parse_init),
	(gst_ogg_parse_dispose), (gst_ogg_parse_submit_buffer),
	(gst_ogg_parse_append_header), (gst_ogg_parse_is_header),
	(gst_ogg_parse_buffer_from_page), (gst_ogg_parse_chain),
	(gst_ogg_parse_change_state), (gst_ogg_parse_plugin_init):
	Add an ogg parser element.

2005-08-28  Andy Wingo  <wingo@pobox.com>

	* Updates for two-arg init from GST_BOILERPLATE_FULL.

2005-08-26  Wim Taymans  <wim@fluendo.com>

	* gst/audioconvert/audioconvert.c: (if), (float),
	(audio_convert_get_func_index), (check_default),
	(audio_convert_clean_fmt), (audio_convert_prepare_context),
	(audio_convert_clean_context), (audio_convert_get_sizes),
	(audio_convert_convert):
	Cleanups.

2005-08-26  Wim Taymans  <wim@fluendo.com>

	* gst/audioconvert/audioconvert.c: (if), (float),
	(audio_convert_get_func_index), (check_default),
	(audio_convert_clean_fmt), (audio_convert_prepare_context),
	(audio_convert_clean_context), (audio_convert_get_sizes),
	(audio_convert_convert):
	More elegant and working temp buffer selection algo.

2005-08-26  Wim Taymans  <wim@fluendo.com>

	* gst/audioconvert/audioconvert.c: (if), (float),
	(audio_convert_get_func_index), (check_default),
	(audio_convert_clean_fmt), (audio_convert_prepare_context),
	(audio_convert_clean_context), (audio_convert_get_sizes),
	(get_temp_buffer), (audio_convert_convert):
	Use realloc else we lose our original data.

2005-08-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/audioresample/gstaudioresample.c:
	  use base class' newsegment to properly timestamp

2005-08-26  Wim Taymans  <wim@fluendo.com>

	* gst/audioconvert/audioconvert.c: (if), (float),